--- a/mklivecd/Makefile
+++ b/mklivecd/Makefile
@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.29 2003/12/30 20:19:51 jaco Exp $
+# $Id: Makefile,v 1.30 2004/01/05 12:23:40 jaco Exp $
 
 include Rules.mk
 include Modules.mk
@@ -27,12 +27,18 @@ mklivecd:
 		$(SED) -e 's,@VAL_SPLASH_LINUXRC@,$(VAL_SPLASH_LINUXRC),g' | \
 		$(SED) -e 's,@VAL_SPLASH_SYSINIT@,$(VAL_SPLASH_SYSINIT),g' | \
 		$(SED) -e 's,@VAL_SPLASH_HWDETECT@,$(VAL_SPLASH_HWDETECT),g' | \
-		$(SED) -e 's,@DEF_MODULES@,$(DEF_MODULES),g' | \
-		$(SED) -e 's,@DEF_MODULES_OPT@,$(DEF_MODULES_OPT),g' | \
-		$(SED) -e 's,@DEF_MODULES_DEP@,$(DEF_MODULES_DEP),g' | \
-		$(SED) -e 's,@DEF_SCSI_MODULES@,$(DEF_SCSI_MODULES),g' | \
-		$(SED) -e 's,@DEF_SCSI_MODULES_OPT@,$(DEF_SCSI_MODULES_OPT),g' | \
-		$(SED) -e 's,@DEF_SCSI_MODULES_DEP@,$(DEF_SCSI_MODULES_DEP),g' \
+		$(SED) -e 's,@DEF_MODULES_24@,$(DEF_MODULES_24),g' | \
+		$(SED) -e 's,@DEF_MODULES_OPT_24@,$(DEF_MODULES_OPT_24),g' | \
+		$(SED) -e 's,@DEF_MODULES_DEP_24@,$(DEF_MODULES_DEP_24),g' | \
+		$(SED) -e 's,@DEF_SCSI_MODULES_24@,$(DEF_SCSI_MODULES_24),g' | \
+		$(SED) -e 's,@DEF_SCSI_MODULES_OPT_24@,$(DEF_SCSI_MODULES_OPT_24),g' | \
+		$(SED) -e 's,@DEF_SCSI_MODULES_DEP_24@,$(DEF_SCSI_MODULES_DEP_24),g' | \
+		$(SED) -e 's,@DEF_MODULES_26@,$(DEF_MODULES_26),g' | \
+		$(SED) -e 's,@DEF_MODULES_OPT_26@,$(DEF_MODULES_OPT_26),g' | \
+		$(SED) -e 's,@DEF_MODULES_DEP_26@,$(DEF_MODULES_DEP_26),g' | \
+		$(SED) -e 's,@DEF_SCSI_MODULES_26@,$(DEF_SCSI_MODULES_26),g' | \
+		$(SED) -e 's,@DEF_SCSI_MODULES_OPT_26@,$(DEF_SCSI_MODULES_OPT_26),g' | \
+		$(SED) -e 's,@DEF_SCSI_MODULES_DEP_26@,$(DEF_SCSI_MODULES_DEP_26),g' \
 			>$(DISTDIR)/linuxrc
 	$(CP) $(SRCDIR)/halt.local.in $(DISTDIR)/halt.local
 	$(CAT) $(SRCDIR)/rc.sysinit.in | \
@@ -48,12 +54,18 @@ mklivecd:
 		$(SED) -e 's,@DEF_KEYBOARD@,$(DEF_KEYBOARD),g' | \
 		$(SED) -e 's,@DEF_RESOLUTION@,$(DEF_RESOLUTION),g' | \
 		$(SED) -e 's,@DEF_VGAMODE@,$(DEF_VGAMODE),g' | \
-		$(SED) -e 's,@DEF_MODULES_PATH@,$(DEF_MODULES_PATH),g' | \
-		$(SED) -e 's,@DEF_MODULES_OPT_PATH@,$(DEF_MODULES_OPT_PATH),g' | \
-		$(SED) -e 's,@DEF_MODULES_DEP_PATH@,$(DEF_MODULES_DEP_PATH),g' | \
-		$(SED) -e 's,@DEF_SCSI_MODULES_PATH@,$(DEF_SCSI_MODULES_PATH),g' | \
-		$(SED) -e 's,@DEF_SCSI_MODULES_OPT_PATH@,$(DEF_SCSI_MODULES_OPT_PATH),g' | \
-		$(SED) -e 's,@DEF_SCSI_MODULES_DEP_PATH@,$(DEF_SCSI_MODULES_DEP_PATH),g' \
+		$(SED) -e 's,@DEF_MODULES_PATH_24@,$(DEF_MODULES_PATH_24),g' | \
+		$(SED) -e 's,@DEF_MODULES_OPT_PATH_24@,$(DEF_MODULES_OPT_PATH_24),g' | \
+		$(SED) -e 's,@DEF_MODULES_DEP_PATH_24@,$(DEF_MODULES_DEP_PATH_24),g' | \
+		$(SED) -e 's,@DEF_SCSI_MODULES_PATH_24@,$(DEF_SCSI_MODULES_PATH_24),g' | \
+		$(SED) -e 's,@DEF_SCSI_MODULES_OPT_PATH_24@,$(DEF_SCSI_MODULES_OPT_PATH_24),g' | \
+		$(SED) -e 's,@DEF_SCSI_MODULES_DEP_PATH_24@,$(DEF_SCSI_MODULES_DEP_PATH_24),g' | \
+		$(SED) -e 's,@DEF_MODULES_PATH_26@,$(DEF_MODULES_PATH_26),g' | \
+		$(SED) -e 's,@DEF_MODULES_OPT_PATH_26@,$(DEF_MODULES_OPT_PATH_26),g' | \
+		$(SED) -e 's,@DEF_MODULES_DEP_PATH_26@,$(DEF_MODULES_DEP_PATH_26),g' | \
+		$(SED) -e 's,@DEF_SCSI_MODULES_PATH_26@,$(DEF_SCSI_MODULES_PATH_26),g' | \
+		$(SED) -e 's,@DEF_SCSI_MODULES_OPT_PATH_26@,$(DEF_SCSI_MODULES_OPT_PATH_26),g' | \
+		$(SED) -e 's,@DEF_SCSI_MODULES_DEP_PATH_26@,$(DEF_SCSI_MODULES_DEP_PATH_26),g' \
 			>$(DISTDIR)/$(PKGNAME)
 
 install:
