--- a/mklivecd/src/mklivecd.in
+++ b/mklivecd/src/mklivecd.in
@@ -20,7 +20,7 @@
 #
 # Adapted from the MiniCD (http://www.linuxminicd.org) and mkinitrd build scripts
 #
-# $Id: mklivecd.in,v 1.75 2004/01/05 12:58:59 jaco Exp $
+# $Id: mklivecd.in,v 1.76 2004/01/05 13:24:42 jaco Exp $
 #
 
 use strict;
@@ -56,8 +56,8 @@ my $modules_24     = '@DEF_MODULES_PATH_24@ @DEF_MODULES_DEP_PATH_24@ @DEF_SCSI_
 my $modules_opt_24 = '@DEF_MODULES_OPT_PATH_24@ @DEF_SCSI_MODULES_OPT_PATH_24@';
 my $modules_26     = '@DEF_MODULES_PATH_26@ @DEF_MODULES_DEP_PATH_26@ @DEF_SCSI_MODULES_PATH_26@ @DEF_SCSI_MODULES_OPT_PATH_26@ @DEF_SCSI_MODULES_DEP_PATH_26@';
 my $modules_opt_26 = '@DEF_MODULES_OPT_PATH_26@ @DEF_SCSI_MODULES_OPT_PATH_26@';
-my $nodirs         = '^/[.].* ^/dev$ ^/initrd$ ^/lost+found$ ^/mnt$ ^/proc$ ^/tmp$ ^/var/lock/subsys$ ^/var/tmp$';
-my $nofiles        = '^/[.].* ^/fastboot$ /core[.][0-9][0-9]*$ .*[.]rpmnew$ .*[.]rpmsave$ /[.]bash_history$ /[.]fonts[.]cache-[0-9]$ /[.]xauth.* /[.]xsession-errors$ ^/var/run/';
+my $nodirs         = '^/[.].* ^/dev$ ^/initrd$ ^/lost+found$ ^/mnt$ ^/proc$ ^/tmp$ ^/var/tmp$';
+my $nofiles        = '^/[.].* ^/fastboot$ /core[.][0-9][0-9]*$ .*[.]rpmnew$ .*[.]rpmsave$ /[.]bash_history$ /[.]fonts[.]cache-[0-9]$ /[.]xauth.* /[.]xsession-errors$ ^/var/run/ ^/var/lock/subsys/';
 my $loopmod        = "drivers/block/cloop";
 my $loopcmp        = "create_compressed_fs";
 my $blocksize      = 64;
