--- a/mklivecd/src/mklivecd.in
+++ b/mklivecd/src/mklivecd.in
@@ -20,7 +20,7 @@
 #
 # Adapted from the MiniCD (http://www.linuxminicd.org) and mkinitrd build scripts
 #
-# $Id: mklivecd.in,v 1.78 2004/01/06 04:57:50 jaco Exp $
+# $Id: mklivecd.in,v 1.79 2004/01/06 05:29:14 jaco Exp $
 #
 
 use strict;
@@ -52,9 +52,9 @@ my $modfile        = "/etc/modules.conf";
 my $modext         = ".o";
 my $modules        = undef;
 my $modules_opt    = undef;
-my $modules_24     = '@DEF_MODULES_PATH_24@ @DEF_MODULES_DEP_PATH_24@ @DEF_SCSI_MODULES_PATH_24@ @DEF_SCSI_MODULES_OPT_PATH_24@ @DEF_SCSI_MODULES_DEP_PATH_24@';
+my $modules_24     = '@DEF_MODULES_PATH_24@ @DEF_MODULES_DEP_PATH_24@ @DEF_MODULES_OPT_PATH_24@ @DEF_SCSI_MODULES_PATH_24@ @DEF_SCSI_MODULES_OPT_PATH_24@ @DEF_SCSI_MODULES_DEP_PATH_24@';
 my $modules_opt_24 = '@DEF_MODULES_OPT_PATH_24@ @DEF_SCSI_MODULES_OPT_PATH_24@';
-my $modules_26     = '@DEF_MODULES_PATH_26@ @DEF_MODULES_DEP_PATH_26@ @DEF_SCSI_MODULES_PATH_26@ @DEF_SCSI_MODULES_OPT_PATH_26@ @DEF_SCSI_MODULES_DEP_PATH_26@';
+my $modules_26     = '@DEF_MODULES_PATH_26@ @DEF_MODULES_DEP_PATH_26@ @DEF_MODULES_OPT_PATH_26@ @DEF_SCSI_MODULES_PATH_26@ @DEF_SCSI_MODULES_OPT_PATH_26@ @DEF_SCSI_MODULES_DEP_PATH_26@';
 my $modules_opt_26 = '@DEF_MODULES_OPT_PATH_26@ @DEF_SCSI_MODULES_OPT_PATH_26@';
 my $nodirs         = '^/[.].* ^/dev$ ^/initrd$ ^/lost+found$ ^/mnt$ ^/proc$ ^/tmp$ ^/var/tmp$';
 my $nofiles        = '^/[.].* ^/fastboot$ /core[.][0-9][0-9]*$ .*[.]rpmnew$ .*[.]rpmsave$ /[.]bash_history$ /[.]fonts[.]cache-[0-9]$ /[.]xauth.* /[.]xsession-errors$ ^/var/run/ ^/var/lock/subsys/';
@@ -591,7 +591,7 @@ sub create_initrd {
 	# copy modules
 	foreach my $mod (@allmods) {
 		my $modpath = $o_root."lib/modules/$o_kernel/kernel/$mod$modext";
-		$mod = get_exec("basename $mod$modext");
+		$mod = get_exec("basename $mod");
 		my $tomod = "$dir/lib/modules/$o_kernel/kernel/$mod$modext";
 		if (-f $modpath) {
 			do_copy($modpath, 644, $tomod, ++$pos);
