--- a/livecd-utils/src/livecd-install.pl.in
+++ b/livecd-utils/src/livecd-install.pl.in
@@ -1,7 +1,7 @@
 
 #
 # LiveCD-Install script
-# Copyright (C) 2003, Jaco Greeff <jaco@linuxminicd.org>
+# Copyright (C) 2003-2004, Jaco Greeff <jaco@linuxminicd.org>
 #
 #    This program is free software; you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
@@ -19,7 +19,7 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: livecd-install.pl.in,v 1.1 2003/12/03 05:37:03 jaco Exp $
+# $Id: livecd-install.pl.in,v 1.2 2004/01/06 10:18:10 jaco Exp $
 #
 
 package main;
