--- a/mklivecd/Makefile
+++ b/mklivecd/Makefile
@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.31 2004/01/06 12:51:21 jaco Exp $
+# $Id: Makefile,v 1.32 2004/01/06 13:01:34 jaco Exp $
 
 include Rules.mk
 include Modules.mk
@@ -33,14 +33,16 @@ mklivecd:
 		$(SED) -e 's,@DEF_SCSI_MODULES_24@,$(DEF_SCSI_MODULES_24),g' | \
 		$(SED) -e 's,@DEF_SCSI_MODULES_OPT_24@,$(DEF_SCSI_MODULES_OPT_24),g' | \
 		$(SED) -e 's,@DEF_SCSI_MODULES_DEP_24@,$(DEF_SCSI_MODULES_DEP_24),g' | \
-		$(SED) -e 's,@DEF_USB_24@,$(DEF_USB_24),g' | \
+		$(SED) -e 's,@DEF_USB_MODULES_24@,$(DEF_USB_MODULES_24),g' | \
+		$(SED) -e 's,@DEF_USB_MODULES_DRV_24@,$(DEF_USB_MODULES_DRV_24),g' | \
 		$(SED) -e 's,@DEF_MODULES_26@,$(DEF_MODULES_26),g' | \
 		$(SED) -e 's,@DEF_MODULES_OPT_26@,$(DEF_MODULES_OPT_26),g' | \
 		$(SED) -e 's,@DEF_MODULES_DEP_26@,$(DEF_MODULES_DEP_26),g' | \
 		$(SED) -e 's,@DEF_SCSI_MODULES_26@,$(DEF_SCSI_MODULES_26),g' | \
 		$(SED) -e 's,@DEF_SCSI_MODULES_OPT_26@,$(DEF_SCSI_MODULES_OPT_26),g' | \
 		$(SED) -e 's,@DEF_SCSI_MODULES_DEP_26@,$(DEF_SCSI_MODULES_DEP_26),g' | \
-		$(SED) -e 's,@DEF_USB_26@,$(DEF_USB_26),g' | \
+		$(SED) -e 's,@DEF_USB_MODULES_26@,$(DEF_USB_MODULES_26),g' | \
+		$(SED) -e 's,@DEF_USB_MODULES_DRV_26@,$(DEF_USB_MODULES_DRV_26),g' \
 			>$(DISTDIR)/linuxrc
 	$(CP) $(SRCDIR)/halt.local.in $(DISTDIR)/halt.local
 	$(CAT) $(SRCDIR)/rc.sysinit.in | \
@@ -62,14 +64,16 @@ mklivecd:
 		$(SED) -e 's,@DEF_SCSI_MODULES_PATH_24@,$(DEF_SCSI_MODULES_PATH_24),g' | \
 		$(SED) -e 's,@DEF_SCSI_MODULES_OPT_PATH_24@,$(DEF_SCSI_MODULES_OPT_PATH_24),g' | \
 		$(SED) -e 's,@DEF_SCSI_MODULES_DEP_PATH_24@,$(DEF_SCSI_MODULES_DEP_PATH_24),g' | \
-		$(SED) -e 's,@DEF_USB_PATH_24@,$(DEF_USB_PATH_24),g' | \
+		$(SED) -e 's,@DEF_USB_MODULES_PATH_24@,$(DEF_USB_MODULES_PATH_24),g' | \
+		$(SED) -e 's,@DEF_USB_MODULES_DRV_PATH_24@,$(DEF_USB_MODULES_DRV_PATH_24),g' | \
 		$(SED) -e 's,@DEF_MODULES_PATH_26@,$(DEF_MODULES_PATH_26),g' | \
 		$(SED) -e 's,@DEF_MODULES_OPT_PATH_26@,$(DEF_MODULES_OPT_PATH_26),g' | \
 		$(SED) -e 's,@DEF_MODULES_DEP_PATH_26@,$(DEF_MODULES_DEP_PATH_26),g' | \
 		$(SED) -e 's,@DEF_SCSI_MODULES_PATH_26@,$(DEF_SCSI_MODULES_PATH_26),g' | \
 		$(SED) -e 's,@DEF_SCSI_MODULES_OPT_PATH_26@,$(DEF_SCSI_MODULES_OPT_PATH_26),g' | \
 		$(SED) -e 's,@DEF_SCSI_MODULES_DEP_PATH_26@,$(DEF_SCSI_MODULES_DEP_PATH_26),g' | \
-		$(SED) -e 's,@DEF_USB_PATH_26@,$(DEF_USB_PATH_26),g' \
+		$(SED) -e 's,@DEF_USB_MODULES_PATH_26@,$(DEF_USB_MODULES_PATH_26),g' | \
+		$(SED) -e 's,@DEF_USB_MODULES_DRV_PATH_26@,$(DEF_USB_MODULES_DRV_PATH_26),g' \
 			>$(DISTDIR)/$(PKGNAME)
 
 install:
