--- a/mklivecd/src/linuxrc.in
+++ b/mklivecd/src/linuxrc.in
@@ -22,7 +22,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) linuxrc script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: linuxrc.in,v 1.58 2004/01/06 05:29:14 jaco Exp $
+# $Id: linuxrc.in,v 1.59 2004/01/06 13:25:10 jaco Exp $
 #
 
 ### global variables
@@ -32,13 +32,20 @@ FOUND_MDKISO=""
 OPT_MODULES_24="@DEF_MODULES_OPT_24@"
 DEP_MODULES_24="@DEF_MODULES_DEP_24@ @DEF_SCSI_MODULES_DEP_24@"
 SCSI_MODULES_24="@DEF_SCSI_MODULES_24@ @DEF_SCSI_MODULES_OPT_24@" # these are for the SCSI drivers
+USB_MODULES_24="@DEF_USB_MODULES_24@"
+USB_MODULES_DRV_24="@DEF_USB_MODULES_DRV_24@"
 OPT_MODULES_26="@DEF_MODULES_OPT_26@"
 DEP_MODULES_26="@DEF_MODULES_DEP_26@ @DEF_SCSI_MODULES_DEP_26@"
 SCSI_MODULES_26="@DEF_SCSI_MODULES_26@ @DEF_SCSI_MODULES_OPT_26@" # these are for the SCSI drivers
+USB_MODULES_26="@DEF_USB_MODULES_26@"
+USB_MODULES_DRV_26="@DEF_USB_MODULES_DRV_26@"
 OPT_MODULES="$OPT_MODULES_24"
 DEP_MODULES="$DEP_MODULES_24"
 SCSI_MODULES="$SCSI_MODULES_24" # these are for the SCSI drivers
 FOUND_SCSI=""
+USB_MODULES="$USB_MODULES_24"
+USB_MODULES_DRV="$USB_MODULES_DRV_24"
+FOUND_USB=""
 BASEIMG="livecd"          # name of the base cloop image, with a .clp (cloop), .bzlp (bzloop)
                           # or .sqfs (squashfs) extension, this is the compressed loop image
 LOOPBEXT=".bzlp"          # extension for the above
@@ -189,6 +196,8 @@ initialise() {
 		OPT_MODULES="$OPT_MODULES_26"
 		DEP_MODULES="$DEP_MODULES_26"
 		SCSI_MODULES="$SCSI_MODULES_26"
+		USB_MODULES="$USB_MODULES_26"
+		USB_MODULES_DRV="$USB_MODULES_DRV_26"
 	fi
 
 	set_progress
@@ -286,6 +295,21 @@ findcloop() {
 			loadmod $i && SCSI_FOUND=1
 		done
 		[ -n "$SCSI_FOUND" ] && printloaded || printok
+	fi
+	set_progress
+
+	# probe the USB devices
+	dousb=`grep -iq nousb /proc/cmdline || echo 1`
+	if [ -n "$dousb" ]; then
+		echo -n "Probing USB devices: "
+		USB_FOUND=1
+		for i in $USB_MODULES; do
+			loadmod $i || USB_FOUND=
+		done
+		for i in $USB_MODULES_DRV; do
+			loadmod $i
+		done
+		[ -n "$USB_FOUND" ] && printloaded || printok
 	fi
 	set_progress
 
