--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -21,7 +21,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.71 2003/12/30 20:19:51 jaco Exp $
+# $Id: hwdetect.in,v 1.72 2004/01/07 05:52:49 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -194,7 +194,7 @@ sub hwdetect_init {
 	my @devfspid = fuzzy_pidofs(qr/\bdevfsd\b/);
 	$owndevfsd = 0 if (scalar(@devfspid) > 0);
 	if ((-e '/dev/.devfsd') && (-e '/sbin/devfsd') && ($owndevfsd > 0)) {
-		system("devfsd /dev 2>/dev/null");
+		system("/sbin/devfsd /dev 2>/dev/null");
 	}
 
 	print_success();
