--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -21,7 +21,7 @@
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org) hwdetect script
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: hwdetect.in,v 1.77 2004/01/08 06:52:29 jaco Exp $
+# $Id: hwdetect.in,v 1.78 2004/01/08 07:16:18 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -1218,7 +1218,7 @@ sub hwdetect_writedisks {
 sub hwdetect_swapon {
 	if ($haveswap > 0) {
 		print "Activating swap partitions: ";
-		system("swapon -a -e") ? print_failure() : print_success();
+		system("/sbin/swapon -a -e") ? print_failure() : print_success();
 	}
 	set_progress();
 }
